--- a/zanata-war/src/main/java/org/zanata/webtrans/client/view/TransMemoryView.ui.xml
+++ b/zanata-war/src/main/java/org/zanata/webtrans/client/view/TransMemoryView.ui.xml
@@ -60,8 +60,8 @@
     </ul>
     <ul class="list--horizontal l--push-all-quarter legend">
       <li class="bx--inline zeta">TM Diff Highlighting</li>
-      <li class="bx--inline diff-delete">TM Match</li>
-      <li class="bx--inline diff-insert">Search text</li>
+      <li class="bx--inline diff-delete">Search text</li>
+      <li class="bx--inline diff-insert">TM match</li>
     </ul>
     <g:HTMLPanel ui:field="container" styleName="txt--align-center" />
   </g:HTMLPanel>
